@@ -7,6 +7,7 @@
 - added: `TaskBuilder.success2([send_value])` returns `function` with wrapped `.success()`
 - added: `TaskBuilder.next2(name)` returns `function` with wrapped `.next()`
 - added: new `RESTBuilder` aliases `.DELETE()`, `.PUT()`, `.POST()`, `.PATCH() and `.GET()`
+- added: `schema.before(key, (value, index, index) => value)` is a simple and new alternative to `schema.setPrepare()`
 
 - updated: `F.worker2()` returns entire `stdout` buffer in the `callback(err, buffer)`
 - updated: `$options()` by adding `disabled` key
